# ChangeLog for sci-mathematics/petsc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Jan 2014; Justin Lecher <jlec@gentoo.org> -petsc-3.3_p5.ebuild,
  petsc-3.4.2.ebuild, metadata.xml:
  Punt base.eclass

  22 Feb 2013; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Drop unused local USE-description: 'metis'

  22 Feb 2013; Justin Lecher <jlec@gentoo.org> -petsc-3.1_p8-r1.ebuild,
  -files/petsc-3.1_p8-configure-pic.patch,
  -files/petsc-3.1_p8-disable-rpath.patch, -petsc-3.2_p7.ebuild,
  -files/petsc-3.2_p7-configure-pic.patch,
  -files/petsc-3.2_p7-disable-env-warnings.patch,
  -files/petsc-3.2_p7-disable-rpath.patch, petsc-3.3_p5.ebuild, metadata.xml:
  Use tc-getPKG_CONFIG from toolchain-funcs.eclass instead of plain pkg-config;
  drop old

  06 Mar 2012; Jens-Malte Gottfried <jmgottfried@web.de>
  petsc-3.1_p8-r1.ebuild, +files/petsc-3.1_p8-configure-pic.patch,
  +files/petsc-3.1_p8-disable-rpath.patch:
  fixed legacy ebuild of petsc 3.1

  05 Mar 2012; Sébastien Fabbro <bicatali@gentoo.org> petsc-3.2_p6.ebuild,
  +files/petsc-3.2_p6-configure-pic.patch,
  +files/petsc-3.2_p6-disable-env-warnings.patch,
  +files/petsc-3.2_p6-disable-rpath.patch,
  +files/petsc-3.2_p6-fix-afterimage.patch,
  +files/petsc-3.2_p6-fix-imagemagick.patch,
  +files/petsc-3.2_p6-fix-xops.patch, -files/petsc-configure-pic.patch,
  -files/petsc-disable-env-warnings.patch, -files/petsc-disable-rpath.patch,
  -files/petsc-fix-afterimage.patch, -files/petsc-fix-xops.patch:
  Added EPREFIX love, remove extra quotes, added imagemagick use flag, more
  cleaning

*petsc-3.2_p6 (01 Mar 2012)

  01 Mar 2012; Jens-Malte Gottfried <jmgottfried@web.de>
  petsc-3.1_p8-r1.ebuild, -files/petsc-3.1_p8-configure-pic.patch,
  +petsc-3.2_p6.ebuild, files/petsc-configure-pic.patch:
  added new petsc 3.2-p6 ebuild

  23 Jan 2012; Sébastien Fabbro <bicatali@gentoo.org> -petsc-3.1_p4.ebuild,
  -petsc-3.1_p5-r2.ebuild, -petsc-3.1_p7.ebuild, -petsc-3.1_p8.ebuild,